--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -15,6 +15,10 @@
             text-decoration: none;
             color: white;
             margin: 0 20px;
+
+            &:hover{
+                color: red;
+            }
         }
     }
 
