--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -14,6 +14,8 @@ main{
         .item{
             position: relative;
             transition: ease-in-out .3s;
+            border-radius: 20px;
+            overflow: hidden;
 
             &:hover{
                 transform: scale(1.05);
@@ -22,7 +24,7 @@ main{
             img{
                 height: 100%;
                 width: 100%;
-                object-fit: cover;
+                object-fit: cover;      
             }
     
             .item-text{
@@ -56,6 +58,7 @@ main{
 
             img{ 
                 width: 70%;
+                border-radius: 20px;
             }
 
             figcaption{
@@ -84,4 +87,37 @@ main{
         }
     }
 
+    //About page
+
+    #about-section{
+        padding: 0 40px;
+
+        p{
+            line-height: 2.5em;
+        }
+
+        .about-container{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            margin-bottom: 20px;
+
+            img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                border-radius: 50%;
+            }
+
+            .about-heading{
+                
+                h1{
+                    text-align: center;
+                    margin-bottom: 20px;
+                }
+
+                padding: 20px;
+                
+            }
+        }
+    }
 }
