--- a/partials/_main.scss
+++ b/partials/_main.scss
@@ -97,15 +97,17 @@ main{
         }
 
         .about-container{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
             margin-bottom: 20px;
 
-            img{
-                height: 100%;
-                width: 100%;
-                object-fit: cover;
-                border-radius: 50%;
+            .img-container{
+                margin: 0 auto;
+                
+                img{
+                    height: 400px;
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 25px;
+                }
             }
 
             .about-heading{
